// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en componente <FloatButton /> Debe mostrar FloatButton de agregar evento 1`] = `
<button
  className="btn btn-primary fab"
  onClick={[Function]}
>
  <i
    className="fas fa-plus"
  />
</button>
`;

exports[`Pruebas en componente <FloatButton /> Debe mostrar FloatButton de eliminar evento 1`] = `
<button
  className="btn btn-danger fab"
  onClick={[Function]}
>
  <i
    className="fas fa-trash"
  />
</button>
`;
